tmdl units bug fix, temp tmdl target narrative
-Added code to convert target values that are in ug/l to mg/l so the tables show the correct target value.
-Updated text to correct Temp targets.
-Updated code to reflect change in TMDL db column names from 'impairments' to wq_limited_parameters'.

--- a/state_summary.Rmd
+++ b/state_summary.Rmd
@@ -659,7 +659,7 @@ In streams designated as salmon and steelhead spawning areas, the salmon & steel
 
 ##### Application of the Cool Water Species narrative criterion for temperature in 340-041-0028 (9)(a). 
 
-The Upper Klamath and Lost Subbasins temperature TMDL (DEQ 2019) established a numeric benchmark implementing the cool water species narrative as an instream daily maximum temperature target of 28°C. In other subbasins where the cool water species narrative criterion applies, there was no assessment of the cool water species criterion.
+The Upper Klamath and Lost Subbasins temperature TMDL (DEQ 2019) established a numeric benchmark implementing the cool water species narrative as an instream daily maximum temperature target of 28°C. In the Lost River, Lost River Diversion Channel, and Klamath Straits Drain, the instream daily maximum temperature target is 27.9°C to account for the 0.1°C set aside in the TMDL for reserve capacity. In other subbasins where the cool water species narrative criterion applies, there was no assessment of the cool water species criterion.
 
 ##### Applicability
 
@@ -687,28 +687,25 @@ tmdl_table <- odeqtmdl::tmdl_db %>%
                   is.na(target_conditionals_references) &
                   pollutant_name_AWQMS %in% c('Total Phosphorus, mixed forms',
                                               'Total suspended solids')) %>%
-  dplyr::select(TMDL_name, approval_year, geo_description, pollutant_name_AWQMS, impairments,target_type, target_value, target_stat_base, 
-                season_start,season_end) %>% 
+  dplyr::select(TMDL_name, approval_year, geo_description, pollutant_name_AWQMS, wq_limited_parameters, 
+                target_type, target_value, target_units, target_stat_base, season_start,season_end) %>% 
   dplyr::distinct() %>% 
-  dplyr::mutate(season_start = format(lubridate::ymd(parse_date_time(season_start, orders = "d-m")),format="%b %d"),
-                season_end = format(lubridate::ymd(parse_date_time(season_end, orders = "d-m")),format="%b %d")) %>% 
-  dplyr::mutate(period = paste0(season_start," - ",season_end)) %>% 
+  dplyr::mutate(season_start = format(lubridate::ymd(lubridate::parse_date_time(season_start, orders = "d-m")), format="%b %d"),
+                season_end = format(lubridate::ymd(lubridate::parse_date_time(season_end, orders = "d-m")), format="%b %d"),
+                period = paste0(season_start," - ",season_end),
+                target_value = dplyr::case_when(target_units == 'ug/l' ~ target_value * 0.001,
+                                                TRUE ~ target_value),
+                target_units = dplyr::case_when(target_units == 'ug/l' ~ 'mg/l',
+                                                TRUE ~ target_units),
+                target_text=as.character(target_value)) %>%
   dplyr::select(-season_start, -season_end)
-
-
-# convert target_value to string
-target_text <- transpose(strsplit(toString(tmdl_table$target_value),","))
-target_text <- data.frame(matrix(unlist(target_text),nrow=length(target_text),byrow=T))
-colnames(target_text) <- c("target_text")
-
-tmdl_table <- dplyr::bind_cols(tmdl_table,target_text)
 
 # TP TMDL SUMMARY 
 tbl.tmdls.tp <- tmdl_table %>%
   dplyr::filter(pollutant_name_AWQMS == "Total Phosphorus, mixed forms") %>% 
-  dplyr::select(TMDL_name, approval_year, impairments) %>% 
+  dplyr::select(TMDL_name, approval_year, wq_limited_parameters) %>% 
   dplyr::group_by(TMDL_name, approval_year) %>% 
-  dplyr::summarise(`303(d) Listing Parameter`=paste0(unique(impairments), collapse = ", ")) %>% 
+  dplyr::summarise(`303(d) Listing Parameter`=paste0(unique(wq_limited_parameters), collapse = ", ")) %>% 
   dplyr::rename(`TMDL Document Name` = TMDL_name,
                 `Year TMDL Issued` = approval_year)
 
@@ -739,10 +736,10 @@ for (i in 1:length(tmdls.name.tp)){
   year <- unique(tmdls.doc.df_1$approval_year)
   
   tmdls.doc.df_2_tp <- tmdls.doc.df_1 %>% 
-    dplyr::select(geo_description,impairments,target_text,target_stat_base,period) %>% 
+    dplyr::select(geo_description, wq_limited_parameters, target_text, target_stat_base, period) %>% 
     dplyr::rename(`Geographic Area` = geo_description,
-                  `303(d) Listing Parameter` = impairments,
-                  `TP Target Concentration mg/L` = target_text,
+                  `303(d) Listing Parameter` = wq_limited_parameters,
+                  `Total Phosphorus Target Concentration mg/L` = target_text,
                   `Statistical Base` = target_stat_base,
                   `Applicable Period` = period)
   
@@ -774,9 +771,9 @@ Total phosphorus status assessment results are reported and presented in the fol
 # TSS TMDL SUMMARY 
 tbl.tmdls.tss <- tmdl_table %>%
   dplyr::filter(pollutant_name_AWQMS == "Total suspended solids") %>% 
-  dplyr::select(TMDL_name, approval_year, impairments) %>% 
+  dplyr::select(TMDL_name, approval_year, wq_limited_parameters) %>% 
   dplyr::group_by(TMDL_name, approval_year) %>% 
-  dplyr::summarise(`303(d) Listing Parameter`=paste0(unique(impairments), collapse = ", ")) %>% 
+  dplyr::summarise(`303(d) Listing Parameter`=paste0(unique(wq_limited_parameters), collapse = ", ")) %>% 
   dplyr::rename(`TMDL Document Name` = TMDL_name,
                 `Year TMDL Issued` = approval_year)
 
@@ -807,9 +804,9 @@ for (i in 1:length(tmdls.name.tss)){
   year <- unique(tmdls.doc.df_1$approval_year)
   
   tmdls.doc.df_2_tss <- tmdls.doc.df_1 %>% 
-    dplyr::select(geo_description,impairments,target_text,target_stat_base,period) %>% 
+    dplyr::select(geo_description, wq_limited_parameters, target_text, target_stat_base, period) %>% 
     dplyr::rename(`Geographic Area` = geo_description,
-                  `303(d) Listing Parameter` = impairments,
+                  `303(d) Listing Parameter` = wq_limited_parameters,
                   `TSS Target Concentration mg/L` = target_text,
                   `Statistical Base` = target_stat_base,
                   `Applicable Period` = period)
